--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,10 @@
     "angular-messages": "^1.4.0",
     "angular-resource": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-ui-router": "^0.2.18",
+    "angular-bootstrap": "^1.3.2",
+    "font-awesome": "fontawesome#^4.6.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
